@@ -1,3 +1,12 @@
+2010-08-15  Stefan Kost  <ensonic@users.sf.net>
+
+	* Geonik/DspClasses/BuzzOsc.h:
+	* Jeskola/Freeverb/denormals.h:
+	  Fix pointer aliasing.
+
+	* Makk/M3/M3.cpp:
+	  Fix uninitialized var (typo).
+
 2010-06-18  Stefan Kost  <ensonic@users.sf.net>
 
 	* FSM/Infector/Track.cpp:
